--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
         "@inertiajs/inertia-react": "^0.7.1",
         "@inertiajs/progress": "^0.2.6",
         "@tailwindcss/forms": "^0.4.0",
+        "gridjs": "^5.0.2",
+        "gridjs-react": "^5.0.2",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-hot-toast": "^2.1.1",
